--- a/index.html
+++ b/index.html
@@ -1,12 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Charity: Water | College Campaign</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #fff;
+      scroll-behavior: smooth;
+    }
+
+    header {
+      background: #fdd835;
+      display: flex;
+      align-items: center;
+      padding: 1rem 2rem;
+      font-weight: bold;
+    }
+
+    header img {
+      height: 24px;
+      margin-right: 10px;
+    }
+
+    .hero {
+      background: #fdd835;
+      padding: 4rem 1rem;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      text-align: center;
+      flex-direction: column;
+    }
+
+    .hero-content {
+      max-width: 600px;
+      width: 100%;
+    }
+
+    .right h1 {
+      font-size: 2.4rem;
+      font-weight: bold;
+      color: #fff;
+      margin-bottom: 1.5rem;
+    }
+
+    .left {
+      color: #fff;
+      font-size: 1.3rem;
+      line-height: 1.5;
+      opacity: 0.9;
+      margin-bottom: 2rem;
+    }
+
+    .cta-button {
+      margin: 0 auto 3rem;
+      background-color: #2196f3;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      width: fit-content;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+      align-self: center;
+    }
+
+    .cta-button:hover,
+    .cta-button:focus {
+      background-color: #1976d2;
+      transform: scale(1.05);
+      outline: none;
+    }
+
+    .hero-image-wrapper {
+      margin-top: 0;
+      max-width: 350px;
+      margin-inline: auto;
+      display: block;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      border-radius: 30px;
+    }
+
+    .hero-image {
+      width: 100%;
+      border-radius: 30px;
+      display: block;
+    }
+
+    .impact-section {
+      background: #fff9e5;
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+    }
+
+    .impact-section h2 {
+      font-weight: bold;
+      color: #333;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    .impact-section p {
+      color: #555;
+      font-size: 1.1rem;
+      max-width: 800px;
+      margin: 0 auto 2rem;
+      line-height: 1.5;
+      text-align: center;
+      opacity: 0.8;
+    }
+
+    .impact-cards {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+
+    .impact-card {
+      flex: 1 1 200px;
+      background: #fdd835;
+      color: #222;
+      border-radius: 15px;
+      padding: 1.5rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .impact-card:hover {
+      transform: translateY(-8px) scale(1.05);
+      box-shadow: 0 12px 20px rgba(0,0,0,0.15);
+    }
+
+    .impact-card h3 {
+      margin-bottom: 0.5rem;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+      padding: 5rem 1rem 1rem;
+      background: #fff;
+    }
+
+    @media (max-width: 768px) {
+      .impact-cards {
+        flex-direction: column;
+        gap: 1.5rem;
+      }
+    }
+
+    @media (min-width: 769px) {
+      .hero {
+        min-height: 70vh;
+      }
+
+      .hero-content {
+        max-width: 700px;
+      }
+    }
+
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 1s ease forwards;
+    }
+
+    .fade-in.delay-1 {
+      animation-delay: 0.3s;
+    }
+
+    .fade-in.delay-2 {
+      animation-delay: 0.6s;
+    }
+
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
 <body>
-    <!-- Add your HTML here -->
+
+  <header>
+    <img src="img/charitywater_logo_horizontal_AllBlack.png" alt="charity: water logo" />
+    charity: water
+  </header>
+
+  <section class="hero">
+    <div class="hero-content">
+      <div class="right fade-in delay-1">
+        <h1>Pure impact starts with you—turn water into life.</h1>
+      </div>
+      <div class="left fade-in delay-1">
+        <p>Your generosity fuels<br>clean water solutions.<br>Be part of charity: water.</p>
+      </div>
+      <a href="#impact" class="cta-button fade-in delay-1">See Your Impact</a>
+    </div>
+
+    <div class="hero-image-wrapper fade-in delay-2">
+      <img
+        src="img/HOPE IN WATER-flipped.jpg"
+        alt="Happy woman with clean water"
+        class="hero-image"
+        loading="lazy"
+      />
+    </div>
+  </section>
+
+  <section id="impact" class="impact-section fade-in delay-2">
+    <div class="impact-content" style="max-width: 1200px; margin: 0 auto; padding: 0 1rem;">
+      <h2>Your Impact in Action</h2>
+      <p>
+        Every donation helps us bring <span style="text-decoration: underline;">clean and safe drinking water</span> to communities in need. Together, we have funded over 50,000 water projects worldwide, changing millions of lives.
+      </p>
+      <div class="impact-cards">
+        <div class="impact-card">
+          <h3>50,000+</h3>
+          <p>Water Projects Funded</p>
+        </div>
+        <div class="impact-card">
+          <h3>11M+</h3>
+          <p>People with Clean Water</p>
+        </div>
+        <div class="impact-card">
+          <h3>100%</h3>
+          <p>Donations Go to Projects</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+ <!-- ✅ Bottom image added here -->
+  <div class="bottom-image-wrapper">
+    <img src="img/charitywater_logo_horizontal_BlackText.png" alt="Hope through clean water" class="bottom-image" />
+  </div>
+
+  <footer>&copy; charity: water</footer>
+
 </body>
 </html>
