--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
       font-weight: bold;
     }
 
-    header img {
-      height: 24px;
-      margin-right: 10px;
-    }
+  header img {
+  height: 20px;
+  max-width: 100px;
+  margin-right: 10px;
+}
 
     .hero {
       background: #fdd835;
@@ -202,7 +203,7 @@
 
   <header>
     <img src="img/charitywater_logo_horizontal_AllBlack.png" alt="charity: water logo" />
-    charity: water
+
   </header>
 
   <section class="hero">
@@ -250,11 +251,11 @@
   </section>
 
  <!-- ✅ Bottom image added here -->
+  <footer>
   <div class="bottom-image-wrapper">
     <img src="img/charitywater_logo_horizontal_BlackText.png" alt="Hope through clean water" class="bottom-image" />
   </div>
-
-  <footer>&copy; charity: water</footer>
+  </footer>
 
 </body>
 </html>
